20.Deployment-stargeie/canary/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
    - name: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: blue-svc
          port: 80
          weight: 40
        - name: green-svc
          port: 80
          weight: 60
